--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Inter:wght@300;400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Inter:wght@300;400;700&display=swap" rel="stylesheet">
     <style>
         body {
             background-color: #000;
@@ -28,39 +28,42 @@
             padding: 5vw;
             position: relative;
             overflow: hidden;
+            background-size: cover;
+            background-position: center center;
+        }
+        /* Dark overlay to blend images and improve text readability */
+        .slide::before {
+            content: '';
+            position: absolute;
+            top: 0; left: 0; right: 0; bottom: 0;
+            background: radial-gradient(ellipse at center, rgba(0,0,0,0.1) 0%, rgba(0,0,0,0.8) 70%, rgba(0,0,0,1) 100%);
+            z-index: 1;
+        }
+        .slide-content {
+            position: relative;
+            z-index: 2;
+            max-width: 950px;
+            text-align: center;
         }
         .title-font {
             font-family: 'Playfair Display', serif;
         }
-        .slide-content {
-            max-width: 900px;
-            text-align: center;
-        }
-        .slide-image {
-            width: 100%;
-            max-width: 500px;
-            height: auto;
-            border-radius: 1rem;
-            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
-            margin-bottom: 2rem;
-            background-color: #1a1a1a;
-        }
-        .slide-text {
-            font-size: 1.2rem;
-            line-height: 1.6;
-            font-weight: 300;
-            opacity: 0.8;
-        }
         .slide-title {
-            font-size: 2.5rem;
+            font-size: 2rem;
             font-weight: 700;
-            margin-bottom: 1rem;
+            text-transform: uppercase;
+            letter-spacing: 0.1em;
+            color: rgba(255,255,255,0.7);
+            margin-bottom: 2rem;
         }
         .voice-over {
-            font-style: italic;
-            font-size: 1.5rem;
-            margin-top: 2rem;
-            max-width: 800px;
+            font-style: normal;
+            font-size: 2rem;
+            margin-top: 1rem;
+            max-width: 850px;
+            line-height: 1.4;
+            font-weight: 300;
+            text-shadow: 0 2px 20px rgba(0,0,0,0.8);
         }
         header {
             position: fixed;
@@ -74,28 +77,26 @@
             text-decoration: none;
             margin-left: 1rem;
             font-size: 1rem;
-            opacity: 0.7;
+            opacity: 0.6;
             transition: opacity 0.3s;
+            font-weight: 700;
         }
         header a:hover {
             opacity: 1;
         }
         header a.active {
             opacity: 1;
-            font-weight: bold;
+            text-decoration: underline;
         }
         @media (min-width: 768px) {
             .slide-title {
-                font-size: 4rem;
-            }
-            .slide-text {
-                font-size: 1.5rem;
+                font-size: 2.5rem;
             }
              .voice-over {
-                font-size: 2rem;
+                font-size: 3rem;
             }
         }
-        /* Animación de cursor */
+        /* Cursor animation */
         .typing::after {
             content: '|';
             animation: blink 1s step-end infinite;
@@ -104,118 +105,121 @@
             from, to { opacity: 1 }
             50% { opacity: 0 }
         }
+        /* Background Images */
+        #slide-1 { background-color: #000; }
+        #slide-2 { background-image: url('caso1.jpg'); }
+        #slide-3 { background-image: url('caso2.jpg'); }
+        #slide-4 { background-image: url('caso3.jpg'); }
+        #slide-5 { background-image: url('caso4.jpg'); }
+        #slide-6 { background-image: url('caso5.jpg'); }
+        #slide-7 { background-image: url('caso6.jpg'); }
+        #slide-8 { background-image: url('caso7.jpg'); }
+        #slide-9 { background-image: url('caso8.jpg'); }
+        #slide-10 { background-image: url('caso9.jpg'); }
+        #slide-11 { background-image: url('caso10.jpg'); }
+        #slide-12 { background-color: #000; }
     </style>
 </head>
 <body>
-    <!-- Selector de Idioma -->
+    <!-- Language Switcher -->
     <header>
         <a href="index.html" class="active">ES</a>
         <a href="index_en.html">EN</a>
     </header>
 
     <!-- Slide 1: Título -->
-    <section class="slide">
+    <section class="slide" id="slide-1">
         <div class="slide-content">
             <h1 class="title-font text-5xl md:text-8xl typing">Dejad que los leads vengan a mí.</h1>
         </div>
     </section>
 
     <!-- Slide 2: The Challenge -->
-    <section class="slide">
+    <section class="slide" id="slide-2">
         <div class="slide-content">
-            <h2 class="slide-title title-font">THE CHALLENGE: El Miedo.</h2>
-            <img src="caso1.jpg" alt="CFO estresado en oficina oscura" class="slide-image">
+            <h2 class="slide-title">EL RETO</h2>
             <p class="voice-over">"En el marketing B2B, el enemigo no es la competencia. Es el miedo. Un miedo que la industria alimenta con presión, ruido y promesas vacías."</p>
         </div>
     </section>
 
     <!-- Slide 3: The Insight -->
-    <section class="slide">
+    <section class="slide" id="slide-3">
         <div class="slide-content">
-            <h2 class="slide-title title-font">THE INSIGHT: La Soledad del Poder.</h2>
-            <img src="caso2.jpg" alt="Close-up a ojos de CEO reflejando pantalla" class="slide-image">
+            <h2 class="slide-title">EL INSIGHT</h2>
             <p class="voice-over">"Un CFO no puede preguntar '¿y si la cago?'. Un CEO no puede admitir que no entiende un término. El verdadero miedo es a la humillación de una mala decisión. A parecer estúpido cuando se supone que eres infalible."</p>
         </div>
     </section>
 
     <!-- Slide 4: The Idea -->
-    <section class="slide">
+    <section class="slide" id="slide-4">
         <div class="slide-content">
-            <img src="caso3.jpg" alt="Cerilla encendiéndose en la oscuridad" class="slide-image">
-            <h2 class="slide-title title-font">Decidimos cometer una herejía: <br>Dejamos de vender.</h2>
-            <p class="slide-text text-3xl md:text-5xl mt-4">...y construimos un Oráculo.</p>
-            <p class="voice-over">"Un lugar anónimo y seguro para matar el miedo más grande de todos: el miedo a preguntar."</p>
+            <h2 class="slide-title">LA IDEA</h2>
+            <p class="voice-over">Decidimos cometer una herejía: <br>Dejamos de vender y construimos un Oráculo.</p>
+            <p class="voice-over mt-8 opacity-80">"Un lugar anónimo y seguro para matar el miedo más grande de todos: el miedo a preguntar."</p>
         </div>
     </section>
 
     <!-- Slide 5: The Execution - La Biblia -->
-    <section class="slide">
+    <section class="slide" id="slide-5">
         <div class="slide-content">
-            <h2 class="slide-title title-font">PASO 1: Escribir la Biblia del Conocimiento.</h2>
-            <img src="caso4.jpg" alt="Biblioteca infinita de datos" class="slide-image">
-            <p class="voice-over">"Primero, creamos la fuente de verdad más exhaustiva de la industria. Un arsenal de respuestas para cada posible duda."</p>
+            <h2 class="slide-title">EJECUCIÓN / PASO 1</h2>
+            <p class="voice-over">Escribir la Biblia del Conocimiento.</p>
         </div>
     </section>
 
     <!-- Slide 6: The Execution - El Cerebro -->
-    <section class="slide">
+    <section class="slide" id="slide-6">
         <div class="slide-content">
-            <h2 class="slide-title title-font">PASO 2: Darle un Cerebro de IA.</h2>
-            <img src="caso5.jpg" alt="Cerebro cristalino formado por luz" class="slide-image">
-            <p class="voice-over">"Luego, le dimos vida al conocimiento. Un consultor que no duerme, no juzga y no tiene una comisión en mente."</p>
+            <h2 class="slide-title">EJECUCIÓN / PASO 2</h2>
+            <p class="voice-over">Darle un Cerebro de IA.</p>
         </div>
     </section>
 
     <!-- Slide 7: The Execution - La Catedral -->
-    <section class="slide">
+    <section class="slide" id="slide-7">
         <div class="slide-content">
-            <h2 class="slide-title title-font">PASO 3: Construir la Catedral Digital.</h2>
-            <img src="caso6.jpg" alt="Santuario minimalista con barra de búsqueda" class="slide-image">
-            <p class="voice-over">"Y finalmente, creamos un santuario digital. Un lugar diseñado para la calma y la claridad, no para la venta."</p>
+            <h2 class="slide-title">EJECUCIÓN / PASO 3</h2>
+            <p class="voice-over">Construir la Catedral Digital.</p>
         </div>
     </section>
 
     <!-- Slide 8: The Results - Reconocimiento -->
-    <section class="slide">
+    <section class="slide" id="slide-8">
         <div class="slide-content">
-            <h2 class="slide-title title-font">RESULTADO: Reconocimiento Instantáneo.</h2>
-            <img src="caso7.jpg" alt="Mapa de Chile como constelación" class="slide-image">
-            <p class="voice-over">"El impacto fue inmediato. En 60 días, aparecimos en el mapa. Google reconoció nuestra autoridad."</p>
+            <h2 class="slide-title">RESULTADO</h2>
+            <p class="voice-over">Reconocimiento Instantáneo.</p>
         </div>
     </section>
 
     <!-- Slide 9: The Results - Fuente de Verdad -->
-    <section class="slide">
+    <section class="slide" id="slide-9">
         <div class="slide-content">
-            <h2 class="slide-title title-font">RESULTADO: La Referencia de la Referencia.</h2>
-            <img src="caso8.jpg" alt="Río de luz entrando en esfera (IA)" class="slide-image">
-            <p class="voice-over">"Pero el verdadero hito fue este: la propia IA de Google empezó a usar nuestro Oráculo como fuente de verdad."</p>
+            <h2 class="slide-title">RESULTADO</h2>
+            <p class="voice-over">La Referencia de la Referencia.</p>
         </div>
     </section>
 
     <!-- Slide 10: The Results - Magnetismo -->
-    <section class="slide">
+    <section class="slide" id="slide-10">
         <div class="slide-content">
-            <h2 class="slide-title title-font">RESULTADO: Magnetismo Orgánico.</h2>
-            <img src="caso9.jpg" alt="Polillas azules atraídas a la luz" class="slide-image">
-            <p class="voice-over">"El modelo de atracción fue validado. Los clientes correctos, con los problemas correctos, comenzaron a llegar. Por sí solos."</p>
+            <h2 class="slide-title">RESULTADO</h2>
+            <p class="voice-over">Magnetismo Orgánico.</p>
         </div>
     </section>
 
     <!-- Slide 11: The Results - Inteligencia -->
-    <section class="slide">
+    <section class="slide" id="slide-11">
         <div class="slide-content">
-            <h2 class="slide-title title-font">RESULTADO: Inteligencia de Mercado a Demanda.</h2>
-            <img src="caso10.jpg" alt="Notas con preguntas en mesa de obsidiana" class="slide-image">
-            <p class="voice-over">"El Oráculo se convirtió en un confesionario, dándonos un mapa en tiempo real de los dolores de la industria."</p>
+            <h2 class="slide-title">RESULTADO</h2>
+            <p class="voice-over">Inteligencia de Mercado a Demanda.</p>
         </div>
     </section>
 
-    <!-- Slide 12: Conclusión -->
-    <section class="slide">
+    <!-- Slide 12: Conclusion -->
+    <section class="slide" id="slide-12">
         <div class="slide-content">
-            <h2 class="slide-title title-font text-4xl md:text-7xl">El miedo se combate con una sola cosa: <br>la verdad.</h2>
-            <p class="voice-over">"Dejamos de perseguir clientes... y empezamos a crear creyentes."</p>
+            <h2 class="title-font text-4xl md:text-7xl leading-tight">El miedo se combate con una sola cosa: <br>la verdad.</h2>
+            <p class="voice-over mt-12">"Dejamos de perseguir clientes... y empezamos a crear creyentes."</p>
         </div>
     </section>
 
