--- a/index_en.html
+++ b/index_en.html
@@ -4,220 +4,268 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Case Study: Let the leads come unto me</title>
+
+    <!-- Open Graph Meta Tags for LinkedIn -->
+    <meta property="og:title" content="I stopped chasing leads. I created an ERPligion." />
+    <meta property="og:description" content="How I went from chasing leads to having them come to me, using AI against AI. A Creative B2B case study." />
+    <meta property="og:image" content="https://kulhunter.github.io/leadscaso/leads.png" />
+    <meta property="og:url" content="https://kulhunter.github.io/leadscaso/index_en.html" />
+    <meta property="og:type" content="website" />
+
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Inter:wght@300;400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
     <style>
         body {
             background-color: #000;
-            color: #fff;
+            color: #e8e6e3;
             font-family: 'Inter', sans-serif;
-            scroll-snap-type: y mandatory;
-            overflow-y: scroll;
-            height: 100vh;
+            overflow-x: hidden;
         }
-        .slide {
-            height: 100vh;
+        .section {
+            min-height: 100vh;
             width: 100vw;
-            scroll-snap-align: start;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            padding: 5vw;
+            display: grid;
+            place-items: center;
+            position: relative;
+            padding: 5rem 1rem;
+        }
+        .section-content {
+            max-width: 900px;
+            text-align: center;
+            width: 100%;
+        }
+        .section-title {
+            font-size: 1rem;
+            font-weight: 500;
+            text-transform: uppercase;
+            letter-spacing: 0.3em;
+            color: rgba(255,255,255,0.4);
+            margin-bottom: 2rem;
+        }
+        .main-text {
+            font-size: clamp(2rem, 6vw, 4.5rem);
+            font-weight: 300;
+            line-height: 1.2;
+            text-shadow: 0 2px 30px rgba(0,0,0,0.5);
+        }
+        .execution-text {
+            font-size: clamp(1.5rem, 4vw, 2rem);
+            font-weight: 400;
+            line-height: 1.4;
+            margin-top: 2rem;
+            color: rgba(255, 255, 255, 0.85);
+        }
+        .hero-title {
+             font-family: 'Playfair Display', serif;
+             font-size: clamp(2.5rem, 8vw, 6rem);
+             font-weight: 700;
+             line-height: 1.1;
+        }
+        .image-container {
+            width: 100%;
+            height: 70vh;
+            margin: 4rem 0;
             position: relative;
             overflow: hidden;
         }
-        .title-font {
-            font-family: 'Playfair Display', serif;
-        }
-        .slide-content {
-            max-width: 900px;
-            text-align: center;
-        }
-        .slide-image {
+        .parallax-image {
             width: 100%;
-            max-width: 500px;
-            height: auto;
+            height: 150%;
+            object-fit: cover;
+            position: absolute;
+            top: -25%;
+            left: 0;
+            will-change: transform;
+        }
+        .full-bleed-section {
+            min-height: 100vh;
+            background-size: cover;
+            background-position: center center;
+            background-attachment: fixed;
+        }
+        .text-overlay {
+            background: rgba(0,0,0,0.5);
+            padding: 2rem;
             border-radius: 1rem;
-            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
-            margin-bottom: 2rem;
-            background-color: #1a1a1a;
-        }
-        .slide-text {
-            font-size: 1.2rem;
-            line-height: 1.6;
-            font-weight: 300;
-            opacity: 0.8;
-        }
-        .slide-title {
-            font-size: 2.5rem;
-            font-weight: 700;
-            margin-bottom: 1rem;
-        }
-        .voice-over {
-            font-style: italic;
-            font-size: 1.5rem;
-            margin-top: 2rem;
-            max-width: 800px;
         }
         header {
             position: fixed;
             top: 0;
             right: 0;
             padding: 1.5rem;
-            z-index: 100;
+            z-index: 1000;
         }
         header a {
             color: white;
             text-decoration: none;
             margin-left: 1rem;
-            font-size: 1rem;
+            font-size: 0.875rem;
             opacity: 0.7;
             transition: opacity 0.3s;
+            font-weight: 500;
         }
         header a:hover {
             opacity: 1;
         }
         header a.active {
             opacity: 1;
-            font-weight: bold;
+            font-weight: 700;
         }
-        @media (min-width: 768px) {
-            .slide-title {
-                font-size: 4rem;
-            }
-            .slide-text {
-                font-size: 1.5rem;
-            }
-             .voice-over {
-                font-size: 2rem;
-            }
+        .reveal {
+            opacity: 0;
+            transform: translateY(50px);
+            transition: opacity 1.2s cubic-bezier(0.165, 0.84, 0.44, 1), transform 1.2s cubic-bezier(0.165, 0.84, 0.44, 1);
         }
-        /* Cursor animation */
-        .typing::after {
-            content: '|';
-            animation: blink 1s step-end infinite;
+        .reveal.is-visible {
+            opacity: 1;
+            transform: translateY(0);
         }
-        @keyframes blink {
-            from, to { opacity: 1 }
-            50% { opacity: 0 }
+        .share-button {
+            display: inline-block;
+            background-color: #0077b5; /* LinkedIn Blue */
+            color: white;
+            padding: 0.75rem 2rem;
+            border-radius: 0.5rem;
+            text-decoration: none;
+            font-weight: 700;
+            letter-spacing: 0.05em;
+            transition: background-color 0.3s, transform 0.2s;
+        }
+        .share-button:hover {
+            background-color: #005e8e;
+            transform: scale(1.05);
         }
     </style>
 </head>
 <body>
-    <!-- Language Switcher -->
+
     <header>
         <a href="index.html">ES</a>
         <a href="index_en.html" class="active">EN</a>
     </header>
 
-    <!-- Slide 1: Title -->
-    <section class="slide">
-        <div class="slide-content">
-            <h1 class="title-font text-5xl md:text-8xl typing">Let the leads come unto me.</h1>
-        </div>
-    </section>
+    <main>
+        <!-- Previous content of the presentation... -->
 
-    <!-- Slide 2: The Challenge -->
-    <section class="slide">
-        <div class="slide-content">
-            <h2 class="slide-title title-font">THE CHALLENGE: Fear.</h2>
-            <img src="caso1.jpg" alt="Stressed CFO in dark office" class="slide-image">
-            <p class="voice-over">"In B2B marketing, the enemy isn't the competition. It's fear. A fear the industry feeds with pressure, noise, and empty promises."</p>
-        </div>
-    </section>
+        <!-- Slide 1: Title -->
+        <section class="section">
+            <div class="section-content">
+                <h1 class="hero-title reveal">Let the leads come unto me.</h1>
+            </div>
+        </section>
 
-    <!-- Slide 3: The Insight -->
-    <section class="slide">
-        <div class="slide-content">
-            <h2 class="slide-title title-font">THE INSIGHT: The Loneliness of Power.</h2>
-            <img src="caso2.jpg" alt="Close-up on CEO's eyes reflecting screen" class="slide-image">
-            <p class="voice-over">"A CFO can't ask, 'what if I screw this up?'. A CEO can't admit they don't understand a term. The real fear is the humiliation of a bad decision. Of looking foolish when you're supposed to be infallible."</p>
-        </div>
-    </section>
+        <!-- Slide 2: The Challenge -->
+        <section class="section">
+            <div class="section-content">
+                <h2 class="section-title reveal">The Challenge</h2>
+                <p class="main-text reveal">In B2B marketing, the enemy isn't the competition. It's fear.</p>
+                <div class="image-container reveal">
+                    <img src="https://kulhunter.github.io/leadscaso/caso1.jpg" alt="Stressed CFO in dark office" class="parallax-image">
+                </div>
+            </div>
+        </section>
 
-    <!-- Slide 4: The Idea -->
-    <section class="slide">
-        <div class="slide-content">
-            <img src="caso3.jpg" alt="A matchstick igniting" class="slide-image">
-            <h2 class="slide-title title-font">We decided to commit a heresy: <br>We stopped selling.</h2>
-            <p class="slide-text text-3xl md:text-5xl mt-4">...and built an Oracle.</p>
-            <p class="voice-over">"An anonymous, safe place to kill the greatest fear of all: the fear of asking."</p>
-        </div>
-    </section>
+        <!-- Slide 3: The Insight -->
+        <section class="section">
+            <div class="section-content">
+                <h2 class="section-title reveal">The Insight</h2>
+                <p class="main-text reveal">A leader doesn't ask a salesperson, 'explain the basics'.</p>
+                <p class="main-text reveal" style="transition-delay: 200ms;">The real fear is confessing your ignorance to the person who wants to sell you something.</p>
+            </div>
+        </section>
+        
+        <!-- Slide 4: The Idea -->
+        <section class="section full-bleed-section" style="background-image: url('https://kulhunter.github.io/leadscaso/caso3.jpg');">
+            <div class="section-content text-overlay">
+                 <h2 class="section-title reveal">The Idea</h2>
+                <p class="main-text reveal">We decided to commit a heresy: we stopped selling and built an Oracle.</p>
+            </div>
+        </section>
 
-    <!-- Slide 5: The Execution - The Bible -->
-    <section class="slide">
-        <div class="slide-content">
-            <h2 class="slide-title title-font">STEP 1: Write the Knowledge Bible.</h2>
-            <img src="caso4.jpg" alt="Infinite data library" class="slide-image">
-            <p class="voice-over">"First, we created the industry's most exhaustive source of truth. An arsenal of answers for every possible question."</p>
-        </div>
-    </section>
+        <!-- Execution Steps -->
+        <section class="section">
+            <div class="section-content">
+                <h2 class="section-title reveal">The Execution</h2>
+                <div class="my-20 reveal">
+                    <img src="https://kulhunter.github.io/leadscaso/caso4.jpg" alt="Infinite data library" class="w-full max-w-2xl mx-auto rounded-lg shadow-2xl">
+                    <p class="execution-text">Step 1: Write the Knowledge Bible.</p>
+                </div>
+                <div class="my-20 reveal">
+                    <img src="https://kulhunter.github.io/leadscaso/caso5.jpg" alt="Crystalline brain formed by light" class="w-full max-w-2xl mx-auto rounded-lg shadow-2xl">
+                    <p class="execution-text">Step 2: Give it an AI Brain.</p>
+                </div>
+                <div class="my-20 reveal">
+                    <img src="https://kulhunter.github.io/leadscaso/caso6.jpg" alt="Minimalist sanctuary with search bar" class="w-full max-w-2xl mx-auto rounded-lg shadow-2xl">
+                    <p class="execution-text">Step 3: Build the Digital Cathedral.</p>
+                </div>
+            </div>
+        </section>
 
-    <!-- Slide 6: The Execution - The Brain -->
-    <section class="slide">
-        <div class="slide-content">
-            <h2 class="slide-title title-font">STEP 2: Give it an AI Brain.</h2>
-            <img src="caso5.jpg" alt="Crystalline brain formed by light" class="slide-image">
-            <p class="voice-over">"Then, we gave knowledge a life. A consultant that doesn't sleep, doesn't judge, and doesn't have a commission in mind."</p>
-        </div>
-    </section>
+        <!-- Results -->
+        <section class="section">
+            <div class="section-content space-y-24">
+                <div class="reveal">
+                    <h2 class="section-title">Result</h2>
+                    <p class="main-text">Instant Recognition.</p>
+                    <p class="text-xl mt-4 text-gray-400">In 60 days, we were on the map. Google acknowledged our authority.</p>
+                </div>
+                <div class="reveal">
+                    <h2 class="section-title">Result</h2>
+                    <p class="main-text">The Reference of the Reference.</p>
+                    <p class="text-xl mt-4 text-gray-400">Google's own AI began using our Oracle as a source of truth.</p>
+                </div>
+                 <div class="reveal">
+                    <h2 class="section-title">Result</h2>
+                    <p class="main-text">Organic Magnetism.</p>
+                    <p class="text-xl mt-4 text-gray-400">The right customers, with the right problems, began to arrive. On their own.</p>
+                </div>
+            </div>
+        </section>
+        
+        <!-- Conclusion -->
+         <section class="section full-bleed-section" style="background-image: url('https://kulhunter.github.io/leadscaso/caso10.jpg');">
+            <div class="section-content text-overlay">
+                <p class="main-text reveal">We stopped chasing customers... and started creating believers.</p>
+            </div>
+        </section>
 
-    <!-- Slide 7: The Execution - The Cathedral -->
-    <section class="slide">
-        <div class="slide-content">
-            <h2 class="slide-title title-font">STEP 3: Build the Digital Cathedral.</h2>
-            <img src="caso6.jpg" alt="Minimalist sanctuary with search bar" class="slide-image">
-            <p class="voice-over">"And finally, we created a digital sanctuary. A place designed for calm and clarity, not for sales."</p>
-        </div>
-    </section>
+        <!-- Final Image & Share Section -->
+        <section class="section bg-gray-100">
+             <div class="section-content reveal text-center">
+                <div class="mb-12">
+                    <h2 class="section-title text-gray-600">SHARE THIS HERESY</h2>
+                    <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fkulhunter.github.io%2Fleadscaso%2Findex_en.html" target="_blank" class="share-button">
+                        Share on LinkedIn
+                    </a>
+                </div>
+                <img src="https://kulhunter.github.io/leadscaso/leads.png" alt="Let the leads come unto me" class="w-full max-w-4xl mx-auto">
+            </div>
+        </section>
 
-    <!-- Slide 8: The Results - Recognition -->
-    <section class="slide">
-        <div class="slide-content">
-            <h2 class="slide-title title-font">RESULT: Instant Recognition.</h2>
-            <img src="caso7.jpg" alt="Map of Chile as a constellation" class="slide-image">
-            <p class="voice-over">"The impact was immediate. In 60 days, we were on the map. Google acknowledged our authority."</p>
-        </div>
-    </section>
+    </main>
 
-    <!-- Slide 9: The Results - Source of Truth -->
-    <section class="slide">
-        <div class="slide-content">
-            <h2 class="slide-title title-font">RESULT: The Reference of the Reference.</h2>
-            <img src="caso8.jpg" alt="River of light entering sphere (AI)" class="slide-image">
-            <p class="voice-over">"But the real milestone was this: Google's own AI began to use our Oracle as a source of truth."</p>
-        </div>
-    </section>
+    <script>
+        const revealElements = document.querySelectorAll('.reveal');
+        const observer = new IntersectionObserver((entries) => {
+            entries.forEach(entry => {
+                if (entry.isIntersecting) {
+                    entry.target.classList.add('is-visible');
+                }
+            });
+        }, { threshold: 0.1 });
+        revealElements.forEach(element => { observer.observe(element); });
 
-    <!-- Slide 10: The Results - Magnetism -->
-    <section class="slide">
-        <div class="slide-content">
-            <h2 class="slide-title title-font">RESULT: Organic Magnetism.</h2>
-            <img src="caso9.jpg" alt="Blue moths attracted to light" class="slide-image">
-            <p class="voice-over">"The attraction model was validated. The right customers, with the right problems, began to arrive. On their own."</p>
-        </div>
-    </section>
-
-    <!-- Slide 11: The Results - Intelligence -->
-    <section class="slide">
-        <div class="slide-content">
-            <h2 class="slide-title title-font">RESULT: On-Demand Market Intelligence.</h2>
-            <img src="caso10.jpg" alt="Notes with questions on obsidian table" class="slide-image">
-            <p class="voice-over">"The Oracle became a confessional, giving us a real-time map of the industry's pain points."</p>
-        </div>
-    </section>
-
-    <!-- Slide 12: Conclusion -->
-    <section class="slide">
-        <div class="slide-content">
-            <h2 class="slide-title title-font text-4xl md:text-7xl">Fear is fought with only one thing: <br>truth.</h2>
-            <p class="voice-over">"We stopped chasing customers... and started creating believers."</p>
-        </div>
-    </section>
-
+        const parallaxImages = document.querySelectorAll('.parallax-image');
+        window.addEventListener('scroll', () => {
+            const scrollY = window.scrollY;
+            parallaxImages.forEach(img => {
+                const speed = -0.3;
+                const yPos = scrollY * speed;
+                img.style.transform = `translateY(${yPos}px)`;
+            });
+        });
+    </script>
 </body>
 </html>
