--- a/index.html
+++ b/index.html
@@ -127,6 +127,15 @@
         .cta-link:hover {
             color: #7dd3fc;
         }
+        /* Animación de cursor parpadeante */
+        .typing::after {
+            content: '|';
+            animation: blink 1s step-end infinite;
+        }
+        @keyframes blink {
+            from, to { opacity: 1 }
+            50% { opacity: 0 }
+        }
     </style>
 </head>
 <body>
@@ -138,7 +147,7 @@
 
     <main>
         <section class="section">
-            <h1 class="hero-title reveal">Dejad que los leads vengan a mí.</h1>
+            <h1 class="hero-title reveal typing">Dejad que los leads vengan a mí.</h1>
         </section>
 
         <section class="section">
