--- a/index.html
+++ b/index.html
@@ -127,7 +127,6 @@
         .cta-link:hover {
             color: #7dd3fc;
         }
-        /* Animación de cursor parpadeante */
         .typing::after {
             content: '|';
             animation: blink 1s step-end infinite;
@@ -201,6 +200,16 @@
             </div>
         </section>
         
+        <section class="section full-bleed-section" style="background-image: url('https://kulhunter.github.io/leadscaso/caso7.jpg');">
+            <div class="section-content w-full h-full flex items-center justify-start text-left">
+                <div class="max-w-lg">
+                    <h2 class="section-title reveal">Resultado</h2>
+                    <p class="main-text reveal">Reconocimiento Instantáneo.</p>
+                    <p class="caption-text mt-4 text-gray-300 reveal" style="transition-delay: 200ms;">En 60 días, aparecimos en el mapa. Google reconoció nuestra autoridad.</p>
+                </div>
+            </div>
+        </section>
+
         <section class="section full-bleed-section" style="background-image: url('https://kulhunter.github.io/leadscaso/sobre-2win.png');">
             <div class="bg-black bg-opacity-60 p-12">
                 <div class="section-content text-center">
@@ -223,6 +232,16 @@
                 <div class="section-content text-center">
                     <p class="main-text reveal">Y por qué somos la respuesta que un CEO buscaría.</p>
                     <a href="https://2win.cl/centro-de-conocimiento/" target="_blank" class="cta-link mt-8 reveal">Prueba el Centro de Conocimiento &rarr;</a>
+                </div>
+            </div>
+        </section>
+
+        <section class="section full-bleed-section" style="background-image: url('https://kulhunter.github.io/leadscaso/caso9.jpg');">
+             <div class="section-content w-full h-full flex items-center justify-start text-left">
+                <div class="max-w-md">
+                    <h2 class="section-title reveal">Resultado</h2>
+                    <p class="main-text reveal">Magnetismo Orgánico.</p>
+                    <p class="caption-text mt-4 text-gray-300 reveal" style="transition-delay: 200ms;">Los clientes correctos, con los problemas correctos, comenzaron a llegar. Por sí solos.</p>
                 </div>
             </div>
         </section>
