--- a/index_en.html
+++ b/index_en.html
@@ -127,7 +127,6 @@
         .cta-link:hover {
             color: #7dd3fc;
         }
-        /* Blinking cursor animation */
         .typing::after {
             content: '|';
             animation: blink 1s step-end infinite;
@@ -201,6 +200,16 @@
             </div>
         </section>
         
+        <section class="section full-bleed-section" style="background-image: url('https://kulhunter.github.io/leadscaso/caso7.jpg');">
+            <div class="section-content w-full h-full flex items-center justify-start text-left">
+                <div class="max-w-lg">
+                    <h2 class="section-title reveal">Result</h2>
+                    <p class="main-text reveal">Instant Recognition.</p>
+                    <p class="caption-text mt-4 text-gray-300 reveal" style="transition-delay: 200ms;">In 60 days, we were on the map. Google acknowledged our authority.</p>
+                </div>
+            </div>
+        </section>
+
         <section class="section full-bleed-section" style="background-image: url('https://kulhunter.github.io/leadscaso/sobre-2win.png');">
             <div class="bg-black bg-opacity-60 p-12">
                 <div class="section-content text-center">
@@ -223,6 +232,16 @@
                 <div class="section-content text-center">
                     <p class="main-text reveal">And why we are the answer a CEO would look for.</p>
                     <a href="https://2win.cl/centro-de-conocimiento/" target="_blank" class="cta-link mt-8 reveal">Try the Knowledge Center &rarr;</a>
+                </div>
+            </div>
+        </section>
+
+        <section class="section full-bleed-section" style="background-image: url('https://kulhunter.github.io/leadscaso/caso9.jpg');">
+             <div class="section-content w-full h-full flex items-center justify-start text-left">
+                <div class="max-w-md">
+                    <h2 class="section-title reveal">Result</h2>
+                    <p class="main-text reveal">Organic Magnetism.</p>
+                    <p class="caption-text mt-4 text-gray-300 reveal" style="transition-delay: 200ms;">The right customers, with the right problems, began to arrive. On their own.</p>
                 </div>
             </div>
         </section>
